# medium-mirror

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py  database.py
app/models/: article.py
app/services/: fetcher.py  parser.py  searcher.py
app/static/: style.css
app/templates/: admin.html  article.html  base.html  index.html  search.html
